--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/app-resources.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/app-resources.html
@@ -16,6 +16,9 @@
             data-values="[flavorType]"
             data-on-change="$ctrl.onUsecaseChange(flavorType)"
         >
+            <oui-select-picker-section
+                data-ng-bind="::'pci_app_add_resources_usecase_item_' + flavorType + '_description' | translate"
+            ></oui-select-picker-section>
         </oui-select-picker>
     </div>
 </div>
@@ -49,35 +52,45 @@
                 <strong data-ng-bind=":: flavor.id | uppercase"></strong>
             </oui-select-picker-label>
 
+            <oui-select-picker-description
+                data-ng-if="$ctrl.appModel.resource.flavorType === 'cpu'"
+            >
+                <span
+                    data-translate="pci_app_add_resources_proposed_cpu_description"
+                    data-translate-values="{resourceDescription: flavor.description}"
+                ></span>
+            </oui-select-picker-description>
+
+            <oui-select-picker-description
+                data-ng-if="$ctrl.appModel.resource.flavorType === 'gpu'"
+            >
+                <div class="d-flex flex-column">
+                    <span
+                        data-ng-bind="$ctrl.appModel.resource.nbResources + ' × ' + flavor.description"
+                    ></span>
+                    <span
+                        data-ng-bind="$ctrl.appModel.resource.nbResources + ' × ' + (flavor.gpuInformation.gpuMemory | bytes:0:true:'B') + ' RAM'"
+                    ></span>
+                </div>
+            </oui-select-picker-description>
+
             <oui-select-picker-section>
+                <div class="d-flex">
+                    <span
+                        data-ng-if="flavor.resourcesPerUnit.cpu * $ctrl.appModel.resource.nbResources === 1"
+                        data-translate="pci_app_add_resources_proposed_cores_single"
+                        data-translate-values="{ cores: (flavor.resourcesPerUnit.cpu * $ctrl.appModel.resource.nbResources) }"
+                    ></span>
+                    <span
+                        data-ng-if="flavor.resourcesPerUnit.cpu * $ctrl.appModel.resource.nbResources !== 1"
+                        data-translate="pci_app_add_resources_proposed_cores"
+                        data-translate-values="{ cores: (flavor.resourcesPerUnit.cpu * $ctrl.appModel.resource.nbResources) }"
+                    ></span>
+                </div>
                 <div class="d-flex">
                     <span
                         data-translate="pci_app_add_resources_proposed_ram"
                         data-translate-values="{ ram: (flavor.resourcesPerUnit.memory * $ctrl.appModel.resource.nbResources | bytes:0:true:'B') }"
-                    ></span>
-                    <span
-                        data-translate="pci_app_add_resources_proposed_type_cpu"
-                    ></span>
-                </div>
-                <div
-                    class="d-flex"
-                    data-ng-if="flavor.gpuInformation.gpuMemory"
-                >
-                    <span>
-                        {{ $ctrl.appModel.resource.nbResources }} *
-                    </span>
-                    <span
-                        data-translate="pci_app_add_resources_proposed_ram"
-                        data-translate-values="{ ram: (flavor.gpuInformation.gpuMemory | bytes:0:true:'B') }"
-                    ></span>
-                    <span
-                        data-translate="pci_app_add_resources_proposed_type_gpu"
-                    ></span>
-                </div>
-                <div class="d-flex">
-                    <span
-                        data-translate="pci_project_flavors_spec_core_details"
-                        data-translate-values="{ vcores: flavor.resourcesPerUnit.cpu * $ctrl.appModel.resource.nbResources }"
                     ></span>
                 </div>
                 <div class="d-flex">
@@ -88,8 +101,8 @@
                 </div>
                 <div class="d-flex">
                     <span
-                        data-translate="pci_app_add_resources_proposed_bandwidth"
-                        data-translate-values="{ bandwidth : (flavor.resourcesPerUnit.publicNetwork * $ctrl.appModel.resource.nbResources | bytes:0:false:'B') }"
+                        data-translate="pci_app_add_resources_proposed_bandwidth_public"
+                        data-translate-values="{ bandwidth : (flavor.resourcesPerUnit.publicNetwork * $ctrl.appModel.resource.nbResources | bytes:2:false:'B') }"
                     ></span>
                 </div>
                 <div
@@ -97,7 +110,7 @@
                     data-ng-if="flavor.resourcesPerUnit.privateNetwork"
                 >
                     <span
-                        data-translate="pci_app_add_resources_proposed_bandwidth"
+                        data-translate="pci_app_add_resources_proposed_bandwidth_private"
                         data-translate-values="{ bandwidth : (flavor.resourcesPerUnit.privateNetwork * $ctrl.appModel.resource.nbResources | bytes:2:false:'B') }"
                     ></span>
                 </div>
@@ -134,10 +147,7 @@
 
     <!--Number of resources title-->
 
-    <oui-field
-        class="mt-2"
-        data-label="{{:: 'pci_app_add_resources_flavor_count' | translate}}"
-    >
+    <oui-field class="mt-2">
         <oui-numeric
             name="nbResources"
             data-disabled="!$ctrl.appModel.resource.flavor"
@@ -151,8 +161,11 @@
         <strong data-translate="pci_app_add_resources_scaling"></strong>
     </p>
 
-    <p class="mb-2">
-        <span data-translate="pci_app_add_resources_scaling_description"></span>
+    <div class="mb-2">
+        <p
+            data-translate="pci_app_add_resources_scaling_description"
+            class="mb-0"
+        ></p>
         <a
             data-ng-href="{{:: $ctrl.getScalingInfoLink() }}"
             target="_blank"
@@ -166,7 +179,12 @@
                 aria-hidden="true"
             ></span>
         </a>
-    </p>
+        <oui-message data-type="info" class="mt-2">
+            <span
+                data-translate="pci_app_add_resources_scaling_description_message"
+            ></span>
+        </oui-message>
+    </div>
 
     <oui-field
         label="{{:: 'pci_app_add_resources_scaling_switch_label' | translate}}"
