--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/app-attach.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/app-attach.html
@@ -2,10 +2,10 @@
 <div class="mb-2">
     <!--Description-->
     <span>
-        <span
+        <p
             class="mb-0"
             data-translate="pci_app_add_attach_container_description"
-        ></span>
+        ></p>
         <a
             data-ng-href="{{:: $ctrl.getStorageInfoLink() }}"
             target="_blank"
@@ -14,7 +14,10 @@
             <span
                 data-translate="pci_app_add_attach_container_description_link"
             ></span>
-            <span class="oui-icon oui-icon-target" aria-hidden="true"></span>
+            <span
+                class="oui-icon oui-icon-external-link"
+                aria-hidden="true"
+            ></span>
         </a>
     </span>
 </div>
