--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/app-configuration.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/app-configuration.html
@@ -26,7 +26,23 @@
             class="oui-box__heading mb-2"
             data-translate="pci_app_add_configuration_label"
         ></h4>
-        <p data-translate="pci_app_add_configuration_label_description"></p>
+        <p
+            data-translate="pci_app_add_configuration_label_description"
+            class="mb-0"
+        ></p>
+        <a
+            data-ng-href="{{:: $ctrl.getLabelsInfoLink() }}"
+            target="_blank"
+            rel="noopener"
+        >
+            <span
+                data-translate="pci_app_add_configuration_label_description_link"
+            ></span>
+            <span
+                class="oui-icon oui-icon-external-link"
+                aria-hidden="true"
+            ></span>
+        </a>
 
         <!--Manage labels-->
         <div class="oui-inline-adder mb-2">
