--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/activeDirectories/edit/federation-edit.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/activeDirectories/edit/federation-edit.html
@@ -1,7 +1,7 @@
 <div
     data-wizard
     data-wizard-title=":: 'dedicatedCloud_USER_AD_edit_title' | translate"
-    data-wizard-on-cancel="$ctrl.goBack.bind($ctrl)"
+    data-wizard-on-cancel="$ctrl.onCancel.bind($ctrl)"
     data-wizard-on-finish="$ctrl.close.bind($ctrl)"
     data-wizard-hide-cancel-button="currentStep !== 1"
     data-wizard-hide-close-button="currentStep !== 1"
