--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/options.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/options.html
@@ -196,5 +196,21 @@
                 </oui-action-menu>
             </oui-tile-actions>
         </oui-tile-definition>
+        <oui-tile-definition>
+            <oui-tile-description>
+                <ovh-manager-pcc-dashboard-options-nsxt
+                    data-current-service="$ctrl.currentService"
+                >
+                </ovh-manager-pcc-dashboard-options-nsxt>
+            </oui-tile-description>
+            <oui-tile-actions>
+                <oui-action-menu
+                    data-disabled
+                    data-compact
+                    data-placement="end"
+                >
+                </oui-action-menu>
+            </oui-tile-actions>
+        </oui-tile-definition>
     </div>
 </oui-tile>
