Revert "feat(pack): add modem type selection on move and migration offer (#8776)"
This reverts commit 58f94d0b

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/confirm/pack-migration-confirm.html
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/confirm/pack-migration-confirm.html
@@ -91,11 +91,11 @@
                                 ></td>
                             </tr>
                             <tr
-                                data-ng-if="$ctrl.MODEM_LIST.includes($ctrl.process.selectedOffer.modem)"
+                                data-ng-if="$ctrl.process.selectedOffer.modemRental"
                             >
                                 <th
                                     scope="row"
-                                    data-translate="{{'telecom_pack_migration_confirm_modem_rental_' + $ctrl.process.selectedOffer.modem}}"
+                                    data-translate="telecom_pack_migration_confirm_modem_rental"
                                     data-title="{{ 'telecom_pack_migration_confirm_header_entitled' | translate }}"
                                 ></th>
                                 <td
