--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/certification/certification.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/certification/certification.html
@@ -14,6 +14,9 @@
     class="oui-link_icon"
     target="_blank"
     rel="noopener"
+    data-track-on="click"
+    data-track-type="action"
+    data-track-name="dedicated::dedicatedCloud::details::dashboard::goto-certified-web-interface"
 >
     <span
         data-translate="ovhManagerPccDashboardOptionsDescriptionsCertification_linkToManagementInterface"
