--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/options.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/options.html
@@ -178,7 +178,7 @@
                     </oui-action-menu-item>
                     <oui-action-menu-item
                         data-ng-if=":: $ctrl.bindings.options.basic.actionMenu.items.switch.exists"
-                        data-on-click="$ctrl.onBasicOptionsUpgrade($ctrl.bindings.options.basic.actionMenu.items.switch.stateParams)"
+                        data-on-click="$ctrl.onGoToBasicOptionsUpgrade($ctrl.bindings.options.basic.actionMenu.items.switch.stateParams)"
                     >
                         <span
                             data-translate="ovhManagerPccDashboardOptions_basicOptions_actionMenu_switch"
