fix(dedicated.pcc): add one tracking on explore certification
ref: MANAGER-9509

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/options.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/options.html
@@ -81,6 +81,9 @@
                         class="oui-link_icon d-block"
                         target="_blank"
                         rel="noopener"
+                        data-track-on="click"
+                        data-track-type="action"
+                        data-track-name="dedicated::dedicatedCloud::details::dashboard::goto-explore-certifications"
                     >
                         <span
                             data-translate="ovhManagerPccDashboardOptions_certification_description_presentation"
