fix(storage.cold-archive): pr fixes
ref: MANAGER-9964
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/template.html
@@ -48,7 +48,7 @@
                 <oui-select
                     class="w-100"
                     data-disabled="!$ctrl.isUsersListSelectable()"
-                    data-items="$ctrl.usersCredentials"
+                    data-items="$ctrl.users"
                     data-match="userNameDescriptionKey"
                     data-name="userNameDescriptionKey"
                     data-model="$ctrl.userModel.linkedMode.selected"
