fix: display shipping page only when user order new modem
not when keeping its modem

Signed-off-by: Stephanie Moallic <stephanie.moallic@corp.ovh.com>

--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/confirm/pack-migration-confirm.html
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/confirm/pack-migration-confirm.html
@@ -95,7 +95,7 @@
                             >
                                 <th
                                     scope="row"
-                                    data-translate="{{'telecom_pack_migration_confirm_modem_rental_' + $ctrl.process.selectedOffer.modem}}"
+                                    data-translate="telecom_pack_migration_confirm_modem_rental"
                                     data-title="{{ 'telecom_pack_migration_confirm_header_entitled' | translate }}"
                                 ></th>
                                 <td
