--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/offers/move-offers.html
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/offers/move-offers.html
@@ -125,7 +125,7 @@
                                         <option
                                             data-ng-repeat="modemOption in offer.modemOptions"
                                             data-ng-value="modemOption.name"
-                                            data-ng-bind-html="$ctrl.getModemOptionLabel(modemOption)"
+                                            data-ng-bind-html="modemOption.label"
                                         >
                                         </option>
                                     </select>
