--- a/packages/manager/modules/pci/src/projects/project/storages/containers/add/components/associate-user-to-container/template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/add/components/associate-user-to-container/template.html
@@ -48,7 +48,7 @@
                 <oui-select
                     class="w-100"
                     data-disabled="!$ctrl.isUsersListSelectable()"
-                    data-items="$ctrl.usersCredentials"
+                    data-items="$ctrl.users"
                     data-match="userNameDescriptionKey"
                     data-name="userNameDescriptionKey"
                     data-model="$ctrl.userModel.linkedMode.selected"
