feat: add rolling update message
datatr-235

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai/apps/components/update-image/update-image.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/components/update-image/update-image.html
@@ -9,7 +9,13 @@
     data-primary-disabled="!$ctrl.imageName"
 >
     <oui-message data-type="info">
-        <span data-translate="pci_app_update_app_image_message"></span>
+        <div class="d-flex flex-column">
+            <span
+                data-translate="pci_app_update_app_image_message_1"
+                class="mb-2"
+            ></span>
+            <span data-translate="pci_app_update_app_image_message_2"></span>
+        </div>
     </oui-message>
     <oui-field
         data-size="xl"
