--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/pack-move.html
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/pack-move.html
@@ -112,7 +112,7 @@
                     <div data-ng-if="$ctrl.moveStep === $ctrl.steps.meeting">
                         <pack-move-meeting
                             data-product-code="$ctrl.offer.selected.productCode"
-                            data-eligibility-reference="$ctrl.eligibilityReference"
+                            data-eligibility-reference="$ctrl.offer.selected.eligibilityReference"
                         ></pack-move-meeting>
                     </div>
                     <div data-ng-if="$ctrl.moveStep === $ctrl.steps.resume">
