--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/confirm/pack-migration-confirm.html
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/confirm/pack-migration-confirm.html
@@ -256,6 +256,41 @@
             ></p>
         </div>
 
+        <div data-ng-if="$ctrl.process.selectedOffer.needMeeting">
+            <p
+                class="mb-3 font-weight-bold"
+                data-translate="telecom_pack_migration_contract_action_create"
+            ></p>
+            <div class="ml-3">
+                <strong
+                    data-ng-bind=":: $ctrl.process.selectedOffer.address.streetNumber"
+                ></strong>
+                <strong
+                    data-ng-bind=":: $ctrl.process.selectedOffer.address.streetName"
+                ></strong>
+            </div>
+            <div class="ml-3 mb-3">
+                <strong
+                    data-ng-bind=":: $ctrl.process.selectedOffer.address.zipCode"
+                ></strong>
+                <strong
+                    data-ng-bind=":: $ctrl.process.selectedOffer.address.city"
+                ></strong>
+            </div>
+            <div>
+                <p
+                    class="mb-3 font-weight-bold"
+                    data-ng-if="$ctrl.process.selectedOffer.meetingSlots.fakeMeeting"
+                    data-translate="telecom_pack_migration_contract_meeting_contact"
+                ></p>
+                <p
+                    class="mb-3 font-weight-bold"
+                    data-ng-if="!$ctrl.process.selectedOffer.meetingSlots.fakeMeeting"
+                    data-ng-bind="$ctrl.getMeeting()"
+                ></p>
+            </div>
+        </div>
+
         <div class="widget-presentation">
             <h2
                 class="widget-presentation-title"
