--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/meeting/pack-migration-meeting.html
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/meeting/pack-migration-meeting.html
@@ -1,6 +1,6 @@
 <h2
     class="widget-presentation-title"
-    data-translate="pack_move_meeting_slots"
+    data-translate="telecom_pack_migration_meeting_slots"
 ></h2>
 <!-- LOADER -->
 <div class="text-center" data-ng-if="$ctrl.loading">
@@ -12,10 +12,10 @@
     data-ng-if="$ctrl.showMeetingSlots && !$ctrl.loading"
 >
     <div class="row">
-        <div
+        <p
             class="font-weight-bold"
-            data-translate="pack_move_meeting_description"
-        ></div>
+            data-translate="telecom_pack_migration_meeting_description"
+        ></p>
 
         <div
             data-ng-show="$ctrl.meetingSlots.canBookFakeMeeting && $ctrl.meetingSlots.slots.length"
@@ -24,14 +24,14 @@
                 <input
                     type="radio"
                     id="radioFakeMeeting"
-                    data-ng-model="$ctrl.offer.meetingSlots.fakeMeeting"
+                    data-ng-model="$ctrl.selectedMeeting.meetingSlots.fakeMeeting"
                     data-ng-disabled="!$ctrl.meetingSlots.canBookFakeMeeting"
                     data-ng-value="true"
                 />
                 <label
                     for="radioFakeMeeting"
                     class="pl-2"
-                    data-translate="pack_move_fake_meeting"
+                    data-translate="telecom_pack_migration_fake_meeting"
                 >
                 </label>
             </div>
@@ -39,33 +39,35 @@
                 <input
                     type="radio"
                     id="radioNoFakeMeeting"
-                    data-ng-model="$ctrl.offer.meetingSlots.fakeMeeting"
+                    data-ng-model="$ctrl.selectedMeeting.meetingSlots.fakeMeeting"
                     data-ng-value="false"
                 />
                 <label
                     for="radioNoFakeMeeting"
                     class="pl-2"
-                    data-translate="pack_move_no_fake_meeting"
+                    data-translate="telecom_pack_migration_no_fake_meeting"
                 >
                 </label>
             </div>
         </div>
-        <div
+        <p
             class="alert alert-info"
             role="alert"
-            data-ng-if="$ctrl.meetingSlots.canBookFakeMeeting &&
-            !$ctrl.meetingSlots.meetingSlots.length"
-            data-translate="pack_move_no_erdv_info"
-        ></div>
+            data-ng-if="$ctrl.meetingSlots.canBookFakeMeeting && !$ctrl.meetingSlots.meetingSlots.length"
+            data-translate="telecom_pack_migration_no_erdv_info"
+        ></p>
 
-        <div class="mt-3" data-translate="pack_move_contact_name_info"></div>
+        <p
+            class="mt-3"
+            data-translate="telecom_pack_migration_contact_name_info"
+        ></p>
 
         <div class="row">
             <div class="form-group col-md-6">
                 <label
                     class="control-label required"
                     for="contactNameId"
-                    data-translate="pack_move_contact_name"
+                    data-translate="telecom_pack_migration_contact_name"
                 ></label>
                 <input
                     id="contactNameId"
@@ -73,53 +75,51 @@
                     required
                     pattern=".+"
                     data-ng-model="$ctrl.contactName"
-                    placeholder="{{'pack_move_contact_name'| translate}}"
+                    placeholder="{{:: 'telecom_pack_migration_contact_name'| translate}}"
                 />
             </div>
         </div>
         <div class="row">
             <div
                 class="col-md-6 mt-2 font-italic font-weight-lighter"
-                data-ng-show="$ctrl.meetingSlots"
-                data-translate="pack_move_mandatory_field"
+                data-ng-if="$ctrl.meetingSlots"
+                data-translate="telecom_pack_migration_mandatory_field"
             ></div>
         </div>
     </div>
 
-    <div
+    <p
         class="mt-3"
-        data-ng-show="!$ctrl.offer.meetingSlots.slot"
-        data-translate="pack_move_programmed_meeting_select"
-    ></div>
-    <div
+        data-ng-if="!$ctrl.selectedMeeting.meetingSlots.slot"
+        data-translate="telecom_pack_migration_programmed_meeting_select"
+    ></p>
+    <p
         class="mt-3"
-        data-ng-show="$ctrl.offer.meetingSlots.slot && !$ctrl.offer.meetingSlots.fakeMeeting"
+        data-ng-if="$ctrl.selectedMeeting.meetingSlots.slot && !$ctrl.selectedMeeting.meetingSlots.fakeMeeting"
         data-ng-bind-html="$ctrl.meetingSelectMessage"
-    ></div>
+    ></p>
 
     <div class="row">
         <div
-            class="card col-md-2 shadow-sm bg-white rounded"
+            class="oui-box oui-box_light m-2 col-md-2"
             data-ng-repeat="meeting in $ctrl.meetings track by $index"
         >
-            <div class="card-body meeting">
-                <h5 class="card-title" data-ng-bind="meeting.title"></h5>
-                <oui-radio
-                    data-ng-repeat="slot in meeting.slots track by $index"
-                    data-on-change="$ctrl.selectSlot(slot.id)"
-                    value="slot.start"
-                    data-model="$ctrl.model"
-                >
-                    {{slot.startTime}} - {{slot.endTime}}
-                </oui-radio>
-            </div>
+            <h5 class="oui-box__heading" data-ng-bind="meeting.title"></h5>
+            <oui-radio
+                data-ng-repeat="slot in meeting.slots track by $index"
+                data-on-change="$ctrl.selectSlot(slot.id)"
+                value="slot.start"
+                data-model="$ctrl.model"
+            >
+                {{slot.startTime}} - {{slot.endTime}}
+            </oui-radio>
         </div>
     </div>
 </div>
 <div class="mt-5" data-ng-if="!$ctrl.loading.init">
     <a
         class="btn btn-default"
-        data-translate="pack_move_confirm_cancel_button"
+        data-translate="telecom_pack_migration_confirm_cancel_button"
         data-ui-sref="telecom.packs.pack"
     >
     </a>
@@ -127,7 +127,7 @@
         type="button"
         class="btn btn-primary"
         data-ng-disabled="$ctrl.checkConfirm()"
-        data-translate="pack_move_confirm"
-        data-ng-click="$ctrl.next()"
+        data-translate="telecom_pack_migration_confirm"
+        data-ng-click="$ctrl.nextStep()"
     ></button>
 </div>
