feat: display serial number for all modems
Signed-off-by: Stephanie Moallic <stephanie.moallic@corp.ovh.com>

--- a/packages/manager/apps/telecom/src/app/telecom/pack/xdsl/access/pack-xdsl-access.html
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/xdsl/access/pack-xdsl-access.html
@@ -842,6 +842,14 @@
                                             class="oui-tile__description"
                                             data-ng-bind="$ctrl.modem.macAddress"
                                         ></div>
+                                        <span
+                                            class="oui-tile__term"
+                                            data-translate="xdsl_details_serial_number"
+                                        ></span>
+                                        <div
+                                            class="oui-tile__description"
+                                            data-ng-bind="$ctrl.modem.serialNumber"
+                                        ></div>
 
                                         <div
                                             class="oui-tile__term"
