fix(container): sidebar menu accessibility
ref: DTCORE-651

Signed-off-by: Cyril Biencourt <cyril.biencourt@ovhcloud.com>
Co-authored-by: Florian Renaut <florian.renaut@corp.ovh.com>

--- a/packages/manager/apps/container/src/container/legacy/template.module.scss
+++ b/packages/manager/apps/container/src/container/legacy/template.module.scss
@@ -35,7 +35,7 @@
   }
 
   // adjust left position if depending on sidebar
-  div[role='navigation'] + &_content {
+  div + &_content {
     left: $sidebar-width;
     @media (max-width: $device-breakpoint-tablet-max-width) {
       left: 0;
