--- a/packages/manager/apps/dedicated/client/app/css/less/common/table.less
+++ b/packages/manager/apps/dedicated/client/app/css/less/common/table.less
@@ -57,3 +57,8 @@ table {
     min-width: 4.375rem;
   }
 }
+
+.table-striped > tbody > tr:nth-child(2n) > td,
+.table-striped > tbody > tr:nth-child(2n) > th {
+  &:extend(.oui-background-p-050);
+}
