fix: pr comment
datatr-181

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/app-attach.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/app-attach.html
@@ -1,7 +1,7 @@
 <!--App attach object storage-->
 <div class="mb-2">
     <!--Description-->
-    <span>
+    <div>
         <p
             class="mb-0"
             data-translate="pci_app_add_attach_container_description"
@@ -19,7 +19,7 @@
                 aria-hidden="true"
             ></span>
         </a>
-    </span>
+    </div>
 </div>
 
 <!--App storage labels-->
