--- a/packages/manager/modules/iam/src/components/deleteEntity/deleteEntity.template.html
+++ b/packages/manager/modules/iam/src/components/deleteEntity/deleteEntity.template.html
@@ -31,6 +31,7 @@
                 >
                     <oui-field
                         data-label="{{:: $ctrl.translate.field | translate: { statement: $root.IAM.DELETE_STATEMENT } }}"
+                        data-ng-if="$ctrl.statement"
                     >
                         <input
                             class="oui-input"
