--- a/packages/manager/modules/iam/src/components/policies/policies.template.html
+++ b/packages/manager/modules/iam/src/components/policies/policies.template.html
@@ -1,7 +1,7 @@
 <div>
     <oui-datagrid
         id="{{ $ctrl.datagridId }}"
-        data-rows-loader="$ctrl.getPolicies($config)"
+        data-rows-loader="$ctrl.getItems($config)"
         data-page="{{ $ctrl.cursors.index }}"
         data-page-size="100"
         data-pagination-mode="arrows"
