--- a/packages/manager/modules/iam/src/components/policy/policy.template.html
+++ b/packages/manager/modules/iam/src/components/policy/policy.template.html
@@ -13,6 +13,7 @@
                 ></span
             ></oui-header-tabs-item>
             <oui-header-tabs-item
+                data-state="{{ $root.IAM.ROUTES.RESOURCE_GROUPS }}"
                 ><span
                     data-translate="iam_policy_header_tabs_item_resource_groups"
                 ></span
